--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,10 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.8.1"
 langchain = "^0.0.190"
+beautifulsoup4 = "^4.12.2"
+selenium = "^4.9.1"
+webdriver-manager = "^3.8.6"
+duckduckgo-search = "^3.8.1"
 
 
 [build-system]
