--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ beautifulsoup4 = "^4.12.2"
 selenium = "^4.9.1"
 webdriver-manager = "^3.8.6"
 duckduckgo-search = "^3.8.1"
+openai = "^0.27.8"
 
 
 [build-system]
