--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ selenium = "^4.9.1"
 webdriver-manager = "^3.8.6"
 duckduckgo-search = "^3.8.1"
 openai = "^0.27.8"
+faiss-cpu = "^1.7.4"
 
 
 [build-system]
