--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ webdriver-manager = "^3.8.6"
 duckduckgo-search = "^3.8.1"
 openai = "^0.27.8"
 faiss-cpu = "^1.7.4"
+tiktoken = "^0.4.0"
 
 
 [build-system]
